# Agentic-AI-Tutor

./: .gitignore  QWEN.md  README.md  SPECIFICATION.md
Tutor version_0.2/Tutor_Gpt/: $null  .gitignore  .pre-commit-config.yaml  QWEN.md  pyproject.toml  requirements.txt
Tutor version_0.2/Tutor_Gpt/.specify/memory/: constitution.md
Tutor version_0.2/Tutor_Gpt/.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
Tutor version_0.2/Tutor_Gpt/specs/001-specify-agents-only/: data-model.md  plan.md  quickstart.md  research.md  tasks.md
Tutor version_0.2/Tutor_Gpt/specs/001-specify-agents-only/checklists/: requirements.md
Tutor version_0.2/Tutor_Gpt/specs/001-specify-agents-only/contracts/: agent-contracts.json
Tutor_Agent_v0.2/backend/: .gitignore  AGENT_PROMPTS_PHASE6_ENHANCEMENT_REPORT.md  PHASE6_IMPLEMENTATION_REPORT.md  PRODUCTION_READINESS_REPORT.md  README.md  api_status_report.py  check_pinecone_index.py  database_status_report.py  demo_rag_system.py  embed_pdfs_to_pinecone.py  pyproject.toml  quick_student_test.py  quick_test.py  run_integration_tests.py  setup_pinecone.py  simple_embedding_test.py  simple_start.py  start_complete_system.py  start_server.py  start_simple_server.py  student_simulation_test.py  test_embedding_system.py  test_gemini_failover.py  test_mongodb.py  test_phase6_features.py  test_rag_agent_integration.py  test_student_database.py  test_system.py  upload_pdfs_to_pinecone.py  verify_phase5c.py  working_embedding_system.py
Tutor_Agent_v0.2/backend/app/: main.py  main_simple.py
Tutor_Agent_v0.2/backend/app/agents/: __init__.py  agent_manager.py  assessment.py  base.py  config.py  feedback.py  feedback_simple.py  orchestrator.py  planning.py  quiz.py  tutor.py
Tutor_Agent_v0.2/backend/app/api/routes/: __init__.py  assessments.py  auth.py  phase6.py  plans.py  profiles.py  rag.py  sessions.py  websocket.py
Tutor_Agent_v0.2/backend/app/core/: config.py  database.py  database_simple.py  gemini_manager.py  init_db.py  metrics.py  mongodb.py  production_config.py  redis.py
Tutor_Agent_v0.2/backend/app/guards/: policies.py  schemas.py
Tutor_Agent_v0.2/backend/app/models/: __init__.py  agent_log.py  assessment.py  directive.py  feedback.py  lesson.py  plan.py  quiz.py  session.py  user.py
Tutor_Agent_v0.2/backend/app/services/: __init__.py  adaptive_learning_service.py  advanced_assessment_service.py  analytics_service.py  cache_service.py  collaboration_service.py  content_management_service.py  directive_service.py  monitoring_service.py  multi_user_service.py  plan_service.py  profile_service.py  rag_service.py  runner.py
Tutor_Agent_v0.2/backend/app/tools/: __init__.py  rag.py  tavily_mcp.py
Tutor_Agent_v0.2/backend/tests/contract/: __init__.py  test_guardrails.py  test_rag.py
Tutor_Agent_v0.2/backend/tests/e2e/: test_playwright_greeting.py
Tutor_Agent_v0.2/backend/tests/integration/: test_api.py  test_metrics_endpoints.py  test_plan_api.py  test_profile_api.py  test_websocket.py  test_websocket_runner.py
Tutor_Agent_v0.2/backend/tests/unit/: test_directive_service.py  test_metrics.py  test_planning_agent.py  test_tavily_mcp.py
backend/: .env.example  README.md  pyproject.toml  pytest.ini
backend/app/: main.py
backend/app/agents/: __init__.py  agent_manager.py  assessment.py  base.py  config.py  feedback.py  orchestrator.py  planning.py  quiz.py  tutor.py
backend/app/api/: middleware.py
backend/app/api/routes/: auth.py  metrics.py  phase6.py  plans.py  profiles.py  rag.py  sessions.py
backend/app/core/: config.py  logging.py  mongodb.py  openai_manager.py  session_store.py
backend/app/guards/: __init__.py  schemas.py
backend/app/middleware/: rate_limiting.py
backend/app/models/: __init__.py  enums.py  user_mongo.py
backend/app/services/: __init__.py  plan_service.py  rag_service.py
backend/app/tools/: __init__.py  rag.py  web_search.py
backend/tests/: conftest.py
backend/tests/contract/: test_guardrails.py
backend/tests/integration/: test_api.py  test_plan_service.py  test_profile_service.py  test_rag_api.py  test_reconnect.py  test_session_creation.py  test_system_integration.py
backend/tests/unit/: test_agents.py  test_assessment_agent.py  test_metrics.py  test_models.py  test_rag_service.py  test_rag_tool.py
(+124 files in other folders)
