[project]
name = "backend"
version = "0.1.0"
description = "Tutor GPT Backend - Agentic tutoring system"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.118.2",
    "openai>=1.40.0",
    "pydantic-settings>=2.4.0",
    "httpx>=0.28.1",
    "motor>=3.3.2",
    "pymongo>=4.6.0",
    "beanie>=1.24.0",
    "pdfplumber>=0.11.7",
    "pinecone>=7.3.0",
    "pinecone-client>=6.0.0",
    "playwright>=1.55.0",
    "psutil>=7.1.0",
    "pydantic>=2.12.0",
    "pypdf2>=3.0.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-playwright>=0.7.1",
    "python-docx>=1.2.0",
    "python-dotenv>=1.1.1",
    "bcrypt>=4.0.0",
    "email-validator>=2.1.0",
    # "redis>=6.4.0",  # Removed - using MongoDB only
    "ruff>=0.14.0",
    "uvicorn[standard]>=0.37.0",
]

[project.optional-dependencies]
dev = [
    "pytest-cov",
    "pytest-asyncio",
    "black",
    "isort",
    "mypy",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "**/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
