[project]
name = "tutor-gpt"
version = "0.1.0"
description = "Autonomous tutoring system with AI agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "openai-agents-sdk>=1.0.0",
    "sqlalchemy>=2.0.23",
    "redis>=5.0.1",
    "pydantic>=2.5.0",
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.1.0",
    "alembic>=1.13.1",
    "mysql-connector-python>=8.2.0",
    "orjson>=3.9.10",
    "httpx>=0.25.2",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uv]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | venv
)/
'''

[tool.flake8]
max-line-length = 88
extend-ignore = ['E203', 'W503']
exclude = ['.git', '__pycache__', 'build', 'dist', 'venv']
max-complexity = 10

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true